--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -380,9 +380,12 @@ html {
     font-weight: 500;
     display: block;
     color: #bb9014 }
-  .section-title h2 {
-    margin-bottom: 25px;
-  color: #bb9014 }
+    .section-title h2 {
+      color: #bb9014;
+      font-size: 2.5em;
+      margin-bottom: 25px;
+      text-align: center; /* Centro el título */
+  }
     .section-title h2 span {
       color:#bb9014 ; }
     @media only screen and (max-width: 767px) {
@@ -3967,6 +3970,8 @@ background: #05708d; }
   max-width: 620px;
   color: #05708d;
   font-size: 16px;
+  margin: 0 auto; /* Centra horizontalmente */
+  text-align: center; /* Centra el texto dentro del párrafo */
 }
 
 .about-image-part {
